<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Carnes Carbon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Carnes Carbon</string>
    <string name="nav_header_subtitle">La mejor parrila de toda la sabana</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_sucursales">Sucursales</string>
    <string name="menu_sucursales1">Sucursales</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_productoHome">ProductoApi</string>

    <!-- informarcion de para descripcion dde los productos-->
    <string name="inf_hamburguesa">hamburguesa doble carne 100% carne</string>
    <string name="inf_hotdog">HotDog con salchicha extra grande</string>
    <string name="inf_pollo">pollo totalmente a la brasa </string>
    <string name="inf_chorizo">chorizo 100% cerdo </string>
    <string name="inf_empanada">Empanada 100% colombianas</string>


    <!--   informacion del crud de productos-->
    <string name="txt_codigo">Código del producto</string>
    <string name="txt_descripcion">Descripción del producto</string>
    <string name="txt_precio">Precio del producto</string>
    <string name="BotonRegistrar">Registrar Producto</string>
    <string name="BotonBuscar">Buscar Producto</string>
    <string name="BotonEliminar">Eliminar Producto</string>
    <string name="BotonModificar">Modificar Producto</string>

    <!--
    KEY MAPS
    -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false" tools:ignore="ExtraTranslation">
        AIzaSyBC6OHodr50cGV-7qX9tcFSVqdlTOVxBQk
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>