<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_restaurant_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/ic_baseline_tapas_24"
            android:title="@string/menu_servicios" />
        <item
            android:id="@+id/nav_producto"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/menu_productos" />
        <item

            android:id="@+id/nav_sucursal"
            android:icon="@drawable/ic_baseline_maps_ugc_24"
            android:title="@string/menu_sucursales" />
            />
        <item

            android:id="@+id/nav_favorito"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_favoritos" />
            />


    </group>
</menu>