<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.carnescarbon.retouno.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_service"
        android:name="com.carnescarbon.retouno.ui.servicios.ServicesFragment"
        android:label="@string/menu_servicios"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/nav_producto"
        android:name="com.carnescarbon.retouno.ui.productos.ProductosFragment"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_productos" />

      <fragment
        android:id="@+id/nav_sucursal"
        android:name="com.carnescarbon.retouno.ui.sucursal.SucursalFragment"
        android:label="@string/menu_sucursales"
        tools:layout="@layout/fragment_sucursal" />


</navigation>