<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.productos.ProductosFragment"
    android:background="@color/white"
    >
    <!--titulo principal-->

    <TextView
        android:id="@+id/text_producto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Producto"
        android:textAlignment="center"
        android:textColor="#C62D2D"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--contenedor card-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--CARD UNO-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <!--Titulo Producto-->
                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/indie_flower_regular"
                    android:text="Hamburgesa"
                    android:textAlignment="center"
                    android:textColor="#C62D2D"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <!--Body Producto-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <!--ing producto-->
                    <ImageView
                        android:id="@+id/imgp1"
                        android:layout_width="270dp"
                        android:layout_height="196dp"
                        android:src="@drawable/prodc_hamburguesa" />
                    <!--Descripcion Producto-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <!--Descripcion -->
                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/indie_flower_regular"
                            android:text="@string/inf_hamburguesa"
                            android:textAlignment="center"
                            android:textStyle="bold" />
                        <!--Boton de mas informacion-->
                        <Button
                            android:id="@+id/button1"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/indie_flower_regular"
                            android:text="Info"
                            android:textColor="@android:color/darker_gray"
                            android:textStyle="bold"
                            app:backgroundTint="@android:color/holo_red_dark"
                            app:icon="@drawable/ic_baseline_add_box_24"
                            app:iconTint="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <!--CARD DOS-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <!--Titulo Producto-->
                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/indie_flower_regular"
                    android:text="HotDog"
                    android:textAlignment="center"
                    android:textColor="#C62D2D"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <!--Body Producto-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <!--ing producto-->
                    <ImageView
                        android:id="@+id/imgp2"
                        android:layout_width="270dp"
                        android:layout_height="196dp"
                        android:src="@drawable/prodc_perrito" />
                    <!--Descripcion Producto-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <!--Descripcion -->
                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/indie_flower_regular"
                            android:text="@string/inf_hotdog"
                            android:textAlignment="center"
                            android:textStyle="bold" />
                        <!--Boton de mas informacion-->
                        <Button
                            android:id="@+id/button2"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/indie_flower_regular"
                            android:text="Info"
                            android:textColor="@android:color/darker_gray"
                            android:textStyle="bold"
                            app:backgroundTint="@android:color/holo_red_dark"
                            app:icon="@drawable/ic_baseline_add_box_24"
                            app:iconTint="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <!--CARD TRES-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <!--Titulo Producto-->
                <TextView
                    android:id="@+id/text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/indie_flower_regular"
                    android:text="Pollo"
                    android:textAlignment="center"
                    android:textColor="#C62D2D"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <!--Body Producto-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <!--ing producto-->
                    <ImageView
                        android:id="@+id/imgp3"
                        android:layout_width="270dp"
                        android:layout_height="196dp"
                        android:src="@drawable/prodc_pollo" />
                    <!--Descripcion Producto-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <!--Descripcion -->
                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/indie_flower_regular"
                            android:text="@string/inf_pollo"
                            android:textAlignment="center"
                            android:textStyle="bold" />
                        <!--Boton de mas informacion-->
                        <Button
                            android:id="@+id/button3"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/indie_flower_regular"
                            android:text="Info"
                            android:textColor="@android:color/darker_gray"
                            android:textStyle="bold"
                            app:backgroundTint="@android:color/holo_red_dark"
                            app:icon="@drawable/ic_baseline_add_box_24"
                            app:iconTint="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <!--CARD Cuatro-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <!--Titulo Producto-->
                <TextView
                    android:id="@+id/text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/indie_flower_regular"
                    android:text="Chorizo"
                    android:textAlignment="center"
                    android:textColor="#C62D2D"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <!--Body Producto-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <!--ing producto-->
                    <ImageView
                        android:id="@+id/imgp4"
                        android:layout_width="270dp"
                        android:layout_height="196dp"
                        android:src="@drawable/prodc_chorizo" />
                    <!--Descripcion Producto-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <!--Descripcion -->
                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/indie_flower_regular"
                            android:text="@string/inf_chorizo"
                            android:textAlignment="center"
                            android:textStyle="bold" />
                        <!--Boton de mas informacion-->
                        <Button
                            android:id="@+id/button4"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/indie_flower_regular"
                            android:text="Info"
                            android:textColor="@android:color/darker_gray"
                            android:textStyle="bold"
                            app:backgroundTint="@android:color/holo_red_dark"
                            app:icon="@drawable/ic_baseline_add_box_24"
                            app:iconTint="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <!--CARD Cinco-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <!--Titulo Producto-->
                <TextView
                    android:id="@+id/text5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/indie_flower_regular"
                    android:text="Empanadas"
                    android:textAlignment="center"
                    android:textColor="#C62D2D"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <!--Body Producto-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <!--ing producto-->
                    <ImageView
                        android:id="@+id/imgp5"
                        android:layout_width="270dp"
                        android:layout_height="196dp"
                        android:src="@drawable/prodc_empanada" />
                    <!--Descripcion Producto-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <!--Descripcion -->
                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/indie_flower_regular"
                            android:text="@string/inf_empanada"
                            android:textAlignment="center"
                            android:textStyle="bold" />
                        <!--Boton de mas informacion-->
                        <Button
                            android:id="@+id/button5"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/indie_flower_regular"
                            android:text="Info"
                            android:textColor="@android:color/darker_gray"
                            android:textStyle="bold"
                            app:backgroundTint="@android:color/holo_red_dark"
                            app:icon="@drawable/ic_baseline_add_box_24"
                            app:iconTint="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>














        </LinearLayout>

    </ScrollView>






</LinearLayout>